WIP social media nav

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
                         <a href="test.html">S</a>
                     </li>
                     <li class="header__fb">
-                        <a href="test.html">ff</a>
+                        <a href="test.html">A</a>
+                    </li>
+                    <li class="header__fb">
+                        <a href="test.html">F</a>
                     </li>
                 </ul>
             </div>
