Add inner wrapper to header

--- a/index.html
+++ b/index.html
@@ -12,34 +12,36 @@
 <body>
     <div class="page_wrapper">
         <div class="header">
-            <div class="header__left">
-                <ul class="header__nav">
-                    <li class="header__home">
-                        <a href="index.html">GaG</a></li>
-                    <li class="header__slimebreaker">
-                        <a href="slimebreaker.html">
-                            SlimeBreaker
-                        </a>
-                    </li>
-                    <li class="blog">
-                        <a href="blog.html">
-                            Blog
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="header__right">
-                <ul class="header__social-nav">
-                    <li class="header__twitter">
-                        <a href="test.html">S</a>
-                    </li>
-                    <li class="header__fb">
-                        <a href="test.html">A</a>
-                    </li>
-                    <li class="header__fb">
-                        <a href="test.html">F</a>
-                    </li>
-                </ul>
+            <div class="header__inner-wrapper">
+                <div class="header__left">
+                    <ul class="header__nav">
+                        <li class="header__home">
+                            <a href="index.html">GaG</a></li>
+                        <li class="header__slimebreaker">
+                            <a href="slimebreaker.html">
+                                SlimeBreaker
+                            </a>
+                        </li>
+                        <li class="blog">
+                            <a href="blog.html">
+                                Blog
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="header__right">
+                    <ul class="header__social-nav">
+                        <li class="header__twitter">
+                            <a href="test.html">S</a>
+                        </li>
+                        <li class="header__fb">
+                            <a href="test.html">A</a>
+                        </li>
+                        <li class="header__fb">
+                            <a href="test.html">F</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="content">
