Updated editor settings

--- a/index.html
+++ b/index.html
@@ -1,52 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Glass Arrow Games</title>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="site.css">
+    <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="site.css" />
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
+      @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="page_wrapper">
-        <div class="header">
-            <div class="header__inner-wrapper">
-                <div class="header__left">
-                    <ul class="header__nav">
-                        <li class="header__home">
-                            <a href="index.html">GaG</a></li>
-                        <li class="header__slimebreaker">
-                            <a href="slimebreaker.html">
-                                SlimeBreaker
-                            </a>
-                        </li>
-                        <li class="blog">
-                            <a href="blog.html">
-                                Blog
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="header__right">
-                    <ul class="header__social-nav">
-                        <li class="header__twitter">
-                            <a href="test.html">S</a>
-                        </li>
-                        <li class="header__fb">
-                            <a href="test.html">A</a>
-                        </li>
-                        <li class="header__fb">
-                            <a href="test.html">F</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+      <div class="header">
+        <div class="header__inner-wrapper">
+          <div class="header__left">
+            <ul class="header__nav">
+              <li class="header__home">
+                <a href="index.html">GaG</a>
+              </li>
+              <li class="header__slimebreaker">
+                <a href="slimebreaker.html"> SlimeBreaker </a>
+              </li>
+              <li class="blog">
+                <a href="blog.html"> Blog </a>
+              </li>
+            </ul>
+          </div>
+          <div class="header__right">
+            <ul class="header__social-nav">
+              <li class="header__twitter">
+                <a href="test.html">S</a>
+              </li>
+              <li class="header__fb">
+                <a href="test.html">A</a>
+              </li>
+              <li class="header__fb">
+                <a href="test.html">F</a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div class="content">
-            <img src="slimes_screenshot.png" alt="slimes attcking">
-        </div>
-    </div> 
-</body>
+      </div>
+      <div class="content">
+        <img src="slimes_screenshot.png" alt="slimes attcking" />
+      </div>
+    </div>
+  </body>
 </html>
