--- a/index.html
+++ b/index.html
@@ -35,14 +35,16 @@
                 <a href="test.html">A</a>
               </li>
               <li class="header__fb">
-                <a href="test.html">F</a>
+                <a href="test.html">I</a>
               </li>
             </ul>
           </div>
         </div>
       </div>
       <div class="content">
-        <img src="slimes_screenshot.png" alt="slimes attcking" />
+        <div class="content__inner-wrapper">
+          <img src="slimes_screenshot.png" alt="slimes attcking" />
+        </div>
       </div>
     </div>
   </body>
