Replace social media fonts

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
     </style>
+    <link rel="stylesheet" type="text/css" href="font/flaticon.css" />
   </head>
   <body>
     <div class="page_wrapper">
@@ -22,20 +23,31 @@
                 <a href="slimebreaker.html"> SlimeBreaker </a>
               </li>
               <li class="blog">
-                <a href="blog.html"> Blog </a>
+                <a href="blog.html">Devlog</a>
               </li>
             </ul>
           </div>
           <div class="header__right">
             <ul class="header__social-nav">
+              <li class="header__fb">
+                <a href="test.html">
+                  <i class="flaticon-043-twitter"></i>
+                </a>
+              </li>
               <li class="header__twitter">
-                <a href="test.html">S</a>
+                <a href="test.html">
+                  <i class="flaticon-025-instagram"></i>
+                </a>
               </li>
               <li class="header__fb">
-                <a href="test.html">A</a>
+                <a href="test.html">
+                  <i class="flaticon-042-reddit"></i>
+                </a>
               </li>
               <li class="header__fb">
-                <a href="test.html">I</a>
+                <a href="test.html">
+                  <i class="flaticon-021-facebook"></i>
+                </a>
               </li>
             </ul>
           </div>
