Add logo and watermark

--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
       <div class="header">
         <div class="header__inner-wrapper" id="menu-body">
           <div class="header__left">
+            <img src="gag.png" height="40" alt="Glass Arrow Games" />
             <ul class="header__nav">
-              <li class="header__home">
-                <a href="index.html">GaG</a>
-              </li>
+              <!-- <li class="header__home">
+                <a href="index.html">
+                  <img src="gag.png" height="64" />
+                </a>
+              </li> -->
               <li class="header__slimebreaker">
                 <a href="slimebreaker.html"> SlimeBreaker </a>
               </li>
@@ -64,7 +67,7 @@
       </div>
       <div class="content">
         <div class="content__inner-wrapper">
-          <img src="slimes_screenshot.png" alt="slimes attcking" />
+          <img src="slimes_screenshot_logo.png" alt="slimes attcking" />
         </div>
       </div>
     </div>
