--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               </li>
               <li class="header__twitter">
                 <a href="test.html">
-                  <i class="flaticon-025-instagram"></i>
+                  <i class="flaticon-016-twitch"></i>
                 </a>
               </li>
               <li class="header__fb">
