--- a/index.html
+++ b/index.html
@@ -68,6 +68,16 @@
       <div class="content">
         <div class="content__inner-wrapper">
           <img src="slimes_screenshot_logo.png" alt="slimes attcking" />
+
+          <div class="content__body">
+            <p class="content__blurb">
+              SlimeBreaker is a squad based real time combat game about pushing
+              through waves of slime to make it o the other side of the
+              mountain. Explore caverns, mine crystals, and build mine tracks.
+              Lay traps and carefully position your squad to break the unending
+              tide of slime that threatens to cut you off from your goal.
+            </p>
+          </div>
         </div>
       </div>
     </div>
