--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
           <div class="content__body">
             <p class="content__blurb">
               SlimeBreaker is a squad based real time combat game about pushing
-              through waves of slime to make it o the other side of the
+              through waves of slime to make it to the other side of the
               mountain. Explore caverns, mine crystals, and build mine tracks.
               Lay traps and carefully position your squad to break the unending
-              tide of slime that threatens to cut you off from your goal.
+              tide of slime that threatens to bury you deep within the darkness.
             </p>
           </div>
         </div>
