--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
               SlimeBreaker is a squad based real time combat game about pushing
               through waves of slime to make it to the other side of the
               mountain. Explore caverns, mine crystals, and build mine tracks.
-              Lay traps and carefully position your squad to break the unending
-              tide of slime that threatens to bury you deep within the darkness.
+              Lay traps, build fortifications, and carefully position your squad
+              to break the unending tide of slime that threatens to bury you
+              deep within the darkness.
             </p>
           </div>
         </div>
