--- a/index.html
+++ b/index.html
@@ -78,6 +78,70 @@
               to break the unending tide of slime that threatens to bury you
               deep within the darkness.
             </p>
+            <p class="content__blurb">
+              Sign up for our newsletter for a chance to get early beta invites!
+            </p>
+
+            <!-- Begin Mailchimp Signup Form -->
+            <div id="mc_embed_signup">
+              <form
+                action="https://gmail.us2.list-manage.com/subscribe/post?u=1298d6d0088e5c7a8577ad2c7&amp;id=cda7bc4a27"
+                method="post"
+                id="mc-embedded-subscribe-form"
+                name="mc-embedded-subscribe-form"
+                class="validate"
+                target="_blank"
+                novalidate
+              >
+                <div id="mc_embed_signup_scroll">
+                  <div class="mc-field-group">
+                    <input
+                      type="email"
+                      value=""
+                      name="EMAIL"
+                      class="required email"
+                      id="mce-EMAIL"
+                      placeholder="email address"
+                    />
+                  </div>
+                  <div id="mce-responses" class="clear">
+                    <div
+                      class="response"
+                      id="mce-error-response"
+                      style="display: none"
+                    ></div>
+                    <div
+                      class="response"
+                      id="mce-success-response"
+                      style="display: none"
+                    ></div>
+                  </div>
+                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                  <div
+                    style="position: absolute; left: -5000px"
+                    aria-hidden="true"
+                  >
+                    <input
+                      type="text"
+                      name="b_1298d6d0088e5c7a8577ad2c7_cda7bc4a27"
+                      tabindex="-1"
+                      value=""
+                    />
+                  </div>
+                  <div class="clear">
+                    <input
+                      type="submit"
+                      value="Subscribe"
+                      name="subscribe"
+                      id="mc-embedded-subscribe"
+                      class="button"
+                    />
+                  </div>
+                </div>
+              </form>
+            </div>
+
+            <!--End mc_embed_signup-->
           </div>
         </div>
       </div>
