--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="header">
         <div class="header__inner-wrapper" id="menu-body">
           <div class="header__left">
-            <img src="gag.png" height="40" alt="Glass Arrow Games" />
+            <img src="gag_no_text.png" height="40" alt="Glass Arrow Games" />
             <ul class="header__nav">
               <!-- <li class="header__home">
                 <a href="index.html">
@@ -71,14 +71,14 @@
 
           <div class="content__body">
             <p class="content__blurb">
-              SlimeBreaker is a squad based real time combat game about pushing
-              through waves of slime to make it to the other side of the
-              mountain. Explore caverns, mine crystals, and build mine tracks.
-              Lay traps, build fortifications, and carefully position your squad
-              to break the unending tide of slime that threatens to bury you
-              deep within the darkness.
+              <span>SlimeBreaker</span> is a squad based real time combat game
+              about pushing through waves of slime to make it to the other side
+              of the mountain. Explore caverns, mine crystals, and build mine
+              tracks. Lay traps, build fortifications, and carefully position
+              your squad to break the unending tide of slime that threatens to
+              bury you deep within the darkness.
             </p>
-            <p class="content__blurb">
+            <p class="content__blurb content__blurb--bigger">
               Sign up for our newsletter for a chance to get early beta invites!
             </p>
 
