--- a/index.html
+++ b/index.html
@@ -1,158 +1,80 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Glass Arrow Games</title>
-    <link rel="stylesheet" href="normalize.css" />
-    <link rel="stylesheet" href="site.css" />
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
-    </style>
-    <link rel="stylesheet" type="text/css" href="font/flaticon.css" />
-  </head>
-  <body>
-    <div class="page_wrapper">
-      <div class="header">
-        <div class="header__inner-wrapper" id="menu-body">
-          <div class="header__left">
-            <img src="gag_no_text.png" height="40" alt="Glass Arrow Games" />
-            <ul class="header__nav">
-              <li class="header__slimebreaker">
-                <a href="slimebreaker.html"> SlimeBreaker </a>
-              </li>
-              <li class="blog">
-                <a href="blog.html">Devlog</a>
-              </li>
-            </ul>
-          </div>
-          <div class="header__right">
-            <ul class="header__social-nav">
-              <li class="header__fb">
-                <a href="test.html">
-                  <i class="flaticon-043-twitter"></i>
-                </a>
-              </li>
-              <li class="header__twitter">
-                <a href="test.html">
-                  <i class="flaticon-016-twitch"></i>
-                </a>
-              </li>
-              <li class="header__fb">
-                <a href="test.html">
-                  <i class="flaticon-042-reddit"></i>
-                </a>
-              </li>
-              <li class="header__fb">
-                <a href="test.html">
-                  <i class="flaticon-021-facebook"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
+---
+title: SlimeBreaker
+layout: default
+---
+
+<img src="assets/images/slimes_screenshot_logo.png" alt="slimes attcking" />
+
+<div class="content__body">
+  <p class="content__blurb">
+    <span>SlimeBreaker</span> is a squad based real time combat game
+      about pushing through waves of slime to make it to the other side
+      of the mountain. Explore caverns, mine crystals, and build mine
+      tracks. Lay traps, build fortifications, and carefully position
+      your squad to break the unending tide of slime that threatens to
+      bury you deep within the darkness.
+    </p>
+    <p class="content__blurb content__blurb--bigger">
+      Sign up for our newsletter for a chance to get early beta invites!
+    </p>
+
+  <!-- Begin Mailchimp Signup Form -->
+  <div id="mc_embed_signup">
+    <form
+      action="https://gmail.us2.list-manage.com/subscribe/post?u=1298d6d0088e5c7a8577ad2c7&amp;id=cda7bc4a27"
+      method="post"
+      id="mc-embedded-subscribe-form"
+      name="mc-embedded-subscribe-form"
+      class="validate"
+      target="_blank"
+      novalidate
+    >
+      <div id="mc_embed_signup_scroll">
+        <div class="mc-field-group">
+          <input
+            type="email"
+            value=""
+            name="EMAIL"
+            class="required email"
+            id="mce-EMAIL"
+            placeholder="email address"
+          />
         </div>
-
-        <div class="header__mobile-wrapper mobile-menu">
-          <div class="mobile-menu__menu-button menu-button" id="menu-button">
-            <div class="menu-button"></div>
-            <div class="menu-button"></div>
-            <div class="menu-button"></div>
-          </div>
+        <div id="mce-responses" class="clear">
+          <div
+            class="response"
+            id="mce-error-response"
+            style="display: none"
+          ></div>
+          <div
+            class="response"
+            id="mce-success-response"
+            style="display: none"
+          ></div>
         </div>
-      </div>
-      <div class="content">
-        <div class="content__inner-wrapper">
-          <img src="slimes_screenshot_logo.png" alt="slimes attcking" />
-
-          <div class="content__body">
-            <p class="content__blurb">
-              <span>SlimeBreaker</span> is a squad based real time combat game
-              about pushing through waves of slime to make it to the other side
-              of the mountain. Explore caverns, mine crystals, and build mine
-              tracks. Lay traps, build fortifications, and carefully position
-              your squad to break the unending tide of slime that threatens to
-              bury you deep within the darkness.
-            </p>
-            <p class="content__blurb content__blurb--bigger">
-              Sign up for our newsletter for a chance to get early beta invites!
-            </p>
-
-            <!-- Begin Mailchimp Signup Form -->
-            <div id="mc_embed_signup">
-              <form
-                action="https://gmail.us2.list-manage.com/subscribe/post?u=1298d6d0088e5c7a8577ad2c7&amp;id=cda7bc4a27"
-                method="post"
-                id="mc-embedded-subscribe-form"
-                name="mc-embedded-subscribe-form"
-                class="validate"
-                target="_blank"
-                novalidate
-              >
-                <div id="mc_embed_signup_scroll">
-                  <div class="mc-field-group">
-                    <input
-                      type="email"
-                      value=""
-                      name="EMAIL"
-                      class="required email"
-                      id="mce-EMAIL"
-                      placeholder="email address"
-                    />
-                  </div>
-                  <div id="mce-responses" class="clear">
-                    <div
-                      class="response"
-                      id="mce-error-response"
-                      style="display: none"
-                    ></div>
-                    <div
-                      class="response"
-                      id="mce-success-response"
-                      style="display: none"
-                    ></div>
-                  </div>
-                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                  <div
-                    style="position: absolute; left: -5000px"
-                    aria-hidden="true"
-                  >
-                    <input
-                      type="text"
-                      name="b_1298d6d0088e5c7a8577ad2c7_cda7bc4a27"
-                      tabindex="-1"
-                      value=""
-                    />
-                  </div>
-                  <div class="clear">
-                    <input
-                      type="submit"
-                      value="Subscribe"
-                      name="subscribe"
-                      id="mc-embedded-subscribe"
-                      class="button"
-                    />
-                  </div>
-                </div>
-              </form>
-            </div>
-
-            <!--End mc_embed_signup-->
-          </div>
+        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+        <div
+          style="position: absolute; left: -5000px"
+          aria-hidden="true"
+        >
+          <input
+            type="text"
+            name="b_1298d6d0088e5c7a8577ad2c7_cda7bc4a27"
+            tabindex="-1"
+            value=""
+          />
+        </div>
+        <div class="clear">
+          <input
+            type="submit"
+            value="Subscribe"
+            name="subscribe"
+            id="mc-embedded-subscribe"
+            class="button"
+          />
         </div>
       </div>
-    </div>
-    <script>
-      var open = false;
-      var menuButton = document.getElementById("menu-button");
-      var menuBody = document.getElementById("menu-body");
-      menuButton.onclick = function handleMenuClick() {
-        if (open) {
-          menuBody.classList.remove("header__inner-wrapper--open");
-        } else {
-          menuBody.classList.add("header__inner-wrapper--open");
-        }
-        open = !open;
-      };
-    </script>
-  </body>
-</html>
+    </form>
+  </div>
+  <!--End mc_embed_signup-->
+</div>
