--- a/index.html
+++ b/index.html
@@ -3,20 +3,23 @@ title: SlimeBreaker
 layout: default
 ---
 
-<img src="assets/images/slimes_screenshot_logo.png" alt="slimes attcking" />
+<img
+  class="index__hero"
+  src="assets/images/slimes_screenshot_logo.png"
+  alt="slimes attcking"
+/>
 
 <div class="content__body">
   <p class="content__blurb">
-    <span>SlimeBreaker</span> is a squad based real time combat game
-      about pushing through waves of slime to make it to the other side
-      of the mountain. Explore caverns, mine crystals, and build mine
-      tracks. Lay traps, build fortifications, and carefully position
-      your squad to break the unending tide of slime that threatens to
-      bury you deep within the darkness.
-    </p>
-    <p class="content__blurb content__blurb--bigger">
-      Sign up for our newsletter for a chance to get early beta invites!
-    </p>
+    <span>SlimeBreaker</span> is a squad based real time combat game about
+    pushing through waves of slime to make it to the other side of the mountain.
+    Explore caverns, mine crystals, and build mine tracks. Lay traps, build
+    fortifications, and carefully position your squad to break the unending tide
+    of slime that threatens to bury you deep within the darkness.
+  </p>
+  <p class="content__blurb content__blurb--bigger">
+    Sign up for our newsletter for a chance to get early beta invites!
+  </p>
 
   <!-- Begin Mailchimp Signup Form -->
   <div id="mc_embed_signup">
@@ -53,10 +56,7 @@ layout: default
           ></div>
         </div>
         <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-        <div
-          style="position: absolute; left: -5000px"
-          aria-hidden="true"
-        >
+        <div style="position: absolute; left: -5000px" aria-hidden="true">
           <input
             type="text"
             name="b_1298d6d0088e5c7a8577ad2c7_cda7bc4a27"
